--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,3 +1,26 @@
 p {
-  font-family: Lato;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.login {
+  padding: 20px;
+}
+button {
+  border: none;
+  cursor: pointer;
+  padding: 10px;
+  margin: 1%;
+}
+.btn-email:hover {
+  background-color: rgb(27, 169, 194);
+  color: white;
+}
+.btn-google:hover {
+  background-color: rgb(233, 110, 110);
+  color: white;
+}
+
+.sucess-auth {
+  background-color: rgb(50, 196, 164);
+  color: white;
 }
